@@ -1,3 +1,8 @@
+2009-07-09  Tom Tromey  <tromey@redhat.com>
+
+	* lib/gdb.exp: Handle TRANSCRIPT.
+	(remote_spawn, remote_close, send_gdb): New procs.
+
 2009-07-10 Phil Muldoon  <pmuldoon@redhat.com>
 
 	* gdb.python/python-prettyprint.c: Add counted null string
