@@ -1,3 +1,7 @@
+2009-07-09  Tom Tromey  <tromey@redhat.com>
+
+	* gdbint.texinfo (Testsuite): Document test transcripts.
+
 2009-07-10  Phil Muldoon  <pmuldoon@redhat.com>
 
 	* gdb.texinfo (Values From Inferior): Add length parameter
